<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adroff</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">SearchActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_offers">OffersActivity</string>
    <string name="title_activity_my_offers">MyOffersActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="lable_points_needed">امتیاز مورد نیاز تا سطح بعدی</string>
    <string name="label_offers_used">آفرهای استفاده شده</string>
    <string name="label_offers_value">به ارزش</string>
    <string name="btn_search_adraf">جستجوی اَدرافِ من</string>
    <string name="bt_my_adraf">آفرهای من</string>
    <string name="title_activity_intro">intro</string>
    <string name="intro1_big_text">در اَدراف چه می گذرد؟</string>
    <string name="intro1_small_text">آفرهای اطراف خود را تنها با یک حرکت بیابید</string>
    <string name="intro2_big_text">این آفرها تنها برای شماست</string>
    <string name="intro2_small_text">هر زمان که خودتان بخواهید میتوانید آفرهای مورد علاقه نزدیکتان را دریافت کنید</string>

</resources>
