<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.appengine.materialdesign.NavigationDrawerFragment"
    android:background="#f5f5f5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <ImageView
                android:id="@+id/image_level"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/circle" />

            <TextView
                android:id="@+id/text_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="6"
                android:textSize="60sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/label_points_needed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/lable_points_needed"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_points_needed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="100"
            android:textColor="#f6902d"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/label_offers_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/label_offers_used"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_offers_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:textColor="#2a73bc"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/label_offers_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/label_offers_value"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_offers_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0 تومان"
            android:textColor="#2a73bc"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_search_adraf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:text="@string/btn_search_adraf"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/btn_my_adraf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:text="@string/bt_my_adraf"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
